Fixed min-width to fit better on smaller screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@ body {
     text-shadow: 2px 2px 3px black;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
     .w-md-50 {
         width: 50% !important;
     }
